<resources>
    <string name="app_name">Bluetooth_Low_Energy_Philipp_Schimpf</string>
    <string name="status">Status :</string>
    <string name="write_message">Write message</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="bl_on">BL ON</string>
    <string name="bl_off">BL OFF</string>
    <string name="clear_log">CLEAR LOG</string>
    <string name="discover_devices">Discover Devices</string>
    <string name="start_server">START SERVER</string>
    <string name="stop_server">STOP SERVER</string>
    <string name="gatt_client">Gatt Client</string>
    <string name="gatt_server">Gatt Server</string>
</resources>