<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".GattClientActivity">

    <TextView
        android:id="@+id/text_view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="20sp"
        android:visibility="visible" />
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />
    <EditText
        android:id="@+id/message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scrollbars="vertical"
        android:hint="@string/write_message"
        android:inputType="text"
        />
    <Button
        android:id="@+id/send_message_button"
        android:text="@string/send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/bl_on"
        android:textOn="@string/bl_off" />
    <Button
        android:id="@+id/clear_log_button"
        android:text="@string/clear_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/discover_button"
        android:text="@string/discover_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/log_text_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="visible"
        android:scrollbars="vertical"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>