<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".GattClientActivity">

    <TextView
        android:id="@+id/server_device_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <Button
        android:id="@+id/clear_log_button"
        android:text="@string/clear_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_server_button"
        android:text="@string/start_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/stop_server_button"
        android:text="@string/stop_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/log_text_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:visibility="visible"
        android:scrollbars="vertical"
        />
</LinearLayout>